Use ModuleFinder to collect names of application modules